--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
                     <video class="absolute bottom-[20%] left-[10%] w-[80%] z-[1]" autoplay>
                         <source src="./assets/video-tv-in-0819.m4v" type="" controls>
                     </video>
-                    <img src="./assets/tv.png" alt="" srcset="" class="relative z-[2]" >
+                    <img src="./assets/tv.png" alt="" srcset="" class="relative z-[2]">
                 </figure>
             </div>
         </div>
@@ -82,13 +82,14 @@
         <div class="max-w-[1170] mx-auto px-[10px]">
             <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
                 <figure class="relative sm:order-1 order-2">
-                    <img src="./assets/mobile-0819.jpg" alt="" srcset="" class="relative sm:w-[70%] mx-auto" >
-                    <div class="sm:w-[50%]  w-[80%] absolute sm:left-[20%] left-[10%] border-[1px] bordder-[#ccc] bottom-[0px] grid grid-cols-[80%_auto] bg-[black] rounded-[5px]">
+                    <img src="./assets/mobile-0819.jpg" alt="" srcset="" class="relative sm:w-[70%] mx-auto">
+                    <div
+                        class="sm:w-[50%]  w-[80%] absolute sm:left-[20%] left-[10%] border-[1px] bordder-[#ccc] bottom-[0px] grid grid-cols-[80%_auto] bg-[black] rounded-[5px]">
                         <div class="grid grid-cols-[20%_auto] p-[15px] gap-[12px] ">
                             <img src="./assets/boxshot.png" alt="" srcset="">
                             <div class="text-white ">
                                 <h3 class="font-bold"> Stranger Things</h3>
-                                    <p class="text-blue-600">Downloading...</p>
+                                <p class="text-blue-600">Downloading...</p>
                             </div>
                         </div>
                     </div>
@@ -108,14 +109,15 @@
             <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
                 <div class=" text-white mx-auto ">
                     <h2 class="text-[50px] font-bold ">Watch everywhere</h2>
-                    <p class="text-[20px] pt-[30px]">Stream unlimited movies and TV shows on <br> your phone, tablet, laptop, and TV.
+                    <p class="text-[20px] pt-[30px]">Stream unlimited movies and TV shows on <br> your phone, tablet,
+                        laptop, and TV.
                     </p>
                 </div>
                 <figure class="relative">
                     <video class="absolute bottom-[44%] left-[17%] w-[63%] z-[1]" autoplay>
                         <source src="./assets/video-devices-in.m4v" type="" controls>
                     </video>
-                    <img src="./assets/device-pile-in.png" alt="" srcset="" class="relative z-[2]" >
+                    <img src="./assets/device-pile-in.png" alt="" srcset="" class="relative z-[2]">
                 </figure>
             </div>
         </div>
@@ -126,17 +128,135 @@
         <div class="max-w-[1170] mx-auto px-[10px]">
             <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
                 <figure class="relative sm:order-1 order-2">
-                    <img src="./assets/background1.png" alt="" srcset="" class="relative sm:w-[70%] mx-auto" >
+                    <img src="./assets/background1.png" alt="" srcset="" class="relative sm:w-[70%] mx-auto">
                 </figure>
                 <div class=" text-white mx-auto px-4 sm:order-2 order-1 ">
                     <h2 class="text-[50px] font-bold leading-[55px]">Create profiles for <br> kids</h2>
-                    <p class="text-[25px] pt-[30px]">Send children on adventures with their favourite characters in a space made just for them—free with your membership.
+                    <p class="text-[25px] pt-[30px]">Send children on adventures with their favourite characters in a
+                        space made just for them—free with your membership.
                     </p>
                 </div>
             </div>
         </div>
     </section>
     <!--5 section ends  -->
+    <!--6 section ends  -->
+    <section class="w-[100%] bg-[black] border-t-[8px] border-t-[#605d5d] sm:py-[50px] py-[50px]">
+        <div class="max-w-[1170] mx-auto px-[10px]">
+            <h1 class="font-bold text-white text-center text-[40px]">Frequently Asked Questions</h1>
+
+            <div class="py-[30px] sm:px-[100px] px-[20px]">
+                <div class="bg-[#2d2d2d]">
+                    <div
+                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        <h3 class="">What is Netflix?</h3><span
+                            class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
+                    </div>
+                    <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
+                        <p> Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies,
+                            anime, documentaries and more – on thousands of internet-connected devices.
+
+                            You can watch as much as you want, whenever you want, without a single ad – all for one low
+                            monthly price. There's always something new to discover, and new TV shows and movies are
+                            added every week!</p>
+                    </div>
+                </div>
+                <div class="bg-[#2d2d2d]">
+                    <div
+                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        <h3 class="">How much does Netflix cost?</h3><span
+                            class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
+                    </div>
+                    <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
+                        <p> 
+                            Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.</p>
+                    </div>
+                </div>
+                <div class="bg-[#2d2d2d]">
+                    <div
+                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        <h3 class="">Where can I watch?</h3><span
+                            class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
+                    </div>
+                    <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
+                        <p>
+                            Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+                            
+                            You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</p>
+                    </div>
+                </div>
+                <div class="bg-[#2d2d2d]">
+                    <div
+                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        <h3 class=""> How do I cancel?</h3><span
+                            class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
+                    </div>
+                    <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
+                        <p>
+                            Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
+                    </div>
+                </div>
+                <div class="bg-[#2d2d2d]">
+                    <div
+                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion ">
+                        <h3 class="">What can I watch on Netflix?</h3><span
+                            class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px]  " id="plus">+</span>
+                    </div>
+                    <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
+                        <p>
+                            Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
+                    </div>
+                </div>
+            </div>
+            <p class="text-[20px] mt-[40px] text-white text-center">Ready to watch? Enter your email to create or restart your membership.</p>
+
+            <div class="max-w-[700px] sm:px-[10px] px-[40px] mx-auto mt-[30px]">
+                <form action="" class="grid gap-[10px] sm:grid-cols-[70%_auto] grid-cols-1">
+                    <input type="text" name="" id=""
+                        class="p-[10px_15px] bg-[black] border-[1px] border-[#ccc] opacity-60"
+                        placeholder="Email address">
+                    <button class="bg-[red] rounded-[5px] font-bold text-[25px] text-white px-[10px] hover:bg-[rgb(193,17,25)] duration-300">Get
+                        started</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!--6 section ends  -->
+    <!--6 section ends  -->
+
+    <!--6 section ends  -->
+
+
+    <!-- javascript start -->
+    <script>
+        let allques = document.querySelectorAll('.faqQuestion');
+        console.log(allques);
+
+        allques.forEach((v, index) => {
+            v.addEventListener("click", () => {
+                // console.log(index)
+
+                v.nextElementSibling.classList.toggle("h-auto");
+                v.nextElementSibling.classList.toggle("scale-y-100");
+                v.nextElementSibling.classList.toggle("p-[20px]");
+                v.children[1].classList.toggle("rotate-45");
+
+                allques.forEach((el,i) => {
+                    // console.log(i)
+                    if ( i != index) {
+                        console.log("hello")
+                        el.nextElementSibling.classList.remove("h-auto");
+                        el.nextElementSibling.classList.remove("scale-y-100");
+                        el.nextElementSibling.classList.remove("p-[20px]");
+                el.children[1].classList.remove("rotate-45");
+
+                    }
+                })
+
+            })
+        })
+    </script>
+    <!-- javascript ends -->
 </body>
 
 </html>
