--- a/Home.html
+++ b/Home.html
@@ -13,9 +13,9 @@
     <section class="w[100%] h-[100vh] bg-[url(./assets/background.jpg)] bg-center bg-cover">
         <div class="w-[100%] h-[100vh] bg-[rgba(0,0,0,0.5)] pt-[35px]">
             <header class="max-w-[1170px] mx-auto ">
-                <div class="grid sm:grid-cols-2 grid-cols[30%_auto] px-[10px] items-center">
+                <div class="grid sm:grid-cols-2 grid-cols-[30%_auto] px-[10px] items-center">
                     <figure>
-                        <img src="./assets/logo.png" class="w-[148px]">
+                        <img src="./assets/logo.png" class="sm:w-[148px] w-[100px]">
                     </figure>
                     <div class="flex justify-end gap-[10px]">
                         <div class="relative">
@@ -148,7 +148,7 @@
             <div class="py-[30px] sm:px-[100px] px-[20px]">
                 <div class="bg-[#2d2d2d]">
                     <div
-                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        class="p-[20px] text-white sm:text-[25px] text-[20px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
                         <h3 class="">What is Netflix?</h3><span
                             class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
                     </div>
@@ -163,72 +163,180 @@
                 </div>
                 <div class="bg-[#2d2d2d]">
                     <div
-                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        class="p-[20px] text-white sm:text-[25px] text-[20px] relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
                         <h3 class="">How much does Netflix cost?</h3><span
                             class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
                     </div>
                     <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
-                        <p> 
-                            Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.</p>
+                        <p>
+                            Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one
+                            fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.
+                        </p>
                     </div>
                 </div>
                 <div class="bg-[#2d2d2d]">
                     <div
-                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        class="p-[20px] text-white sm:text-[25px] text-[20px] relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
                         <h3 class="">Where can I watch?</h3><span
                             class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
                     </div>
                     <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
                         <p>
-                            Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
-                            
-                            You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</p>
+                            Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at
+                            netflix.com from your personal computer or on any internet-connected device that offers the
+                            Netflix app, including smart TVs, smartphones, tablets, streaming media players and game
+                            consoles.
+
+                            You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use
+                            downloads to watch while you're on the go and without an internet connection. Take Netflix
+                            with you anywhere.</p>
                     </div>
                 </div>
                 <div class="bg-[#2d2d2d]">
                     <div
-                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
+                        class="p-[20px] text-white sm:text-[25px] text-[20px] relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion">
                         <h3 class=""> How do I cancel?</h3><span
                             class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px] " id="plus">+</span>
                     </div>
                     <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
                         <p>
-                            Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
+                            Netflix is flexible. There are no annoying contracts and no commitments. You can easily
+                            cancel your account online in two clicks. There are no cancellation fees – start or stop
+                            your account anytime.</p>
                     </div>
                 </div>
                 <div class="bg-[#2d2d2d]">
                     <div
-                        class="p-[20px] text-white text-[25px]  relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion ">
+                        class="p-[20px] text-white sm:text-[25px] text-[20px] relative border-b-[1px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 course-pointer faqQuestion ">
                         <h3 class="">What can I watch on Netflix?</h3><span
                             class="absolute right-[20px] top-[0px] sm:text-[50px] text-[30px]  " id="plus">+</span>
                     </div>
                     <div class="text-white text-[20px]  scale-y-0 h-[0px] orgin-top">
                         <p>
-                            Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
+                            Netflix has an extensive library of feature films, documentaries, TV shows, anime,
+                            award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
                     </div>
                 </div>
             </div>
-            <p class="text-[20px] mt-[40px] text-white text-center">Ready to watch? Enter your email to create or restart your membership.</p>
+            <p class="text-[20px] mt-[40px] text-white text-center">Ready to watch? Enter your email to create or
+                restart your membership.</p>
 
             <div class="max-w-[700px] sm:px-[10px] px-[40px] mx-auto mt-[30px]">
                 <form action="" class="grid gap-[10px] sm:grid-cols-[70%_auto] grid-cols-1">
                     <input type="text" name="" id=""
                         class="p-[10px_15px] bg-[black] border-[1px] border-[#ccc] opacity-60"
                         placeholder="Email address">
-                    <button class="bg-[red] rounded-[5px] font-bold text-[25px] text-white px-[10px] hover:bg-[rgb(193,17,25)] duration-300">Get
+                    <button
+                        class="bg-[red] rounded-[5px] font-bold sm:text-[25px] text-[20px] text-white px-[10px] hover:bg-[rgb(193,17,25)] duration-300">Get
                         started</button>
                 </form>
             </div>
         </div>
     </section>
     <!--6 section ends  -->
-    <!--6 section ends  -->
+    <!--7 section ends  -->
+    <footer class="w-[100%] bg-[black] border-t-[8px] border-t-[#605d5d] sm:py-[60px] py-[50px]">
+        <div class="max-w-[1170] mx-auto sm:px-[150px] px-[30px]">
+            <h3 class="text-white text-[16px]">Questions? Call <a class="underline" href="tel:">000-800-919-1694</a>
+            </h3>
 
-    <!--6 section ends  -->
+            <div class="py-[30px] grid sm:grid-cols-4 grid-cols-1 text-white">
+                <div>
+                    <ul>
+                        <li><a class="underline leading-[30px]" href="">Faq</a></li>
+                    </ul>
+                    <ul>
+                        <li><a class="underline leading-[30px]" href="">Investor Relations</a></li>
+                    </ul>
+                    <ul>
+                        <li><a class="underline leading-[30px]" href="">Privacy</a></li>
+                    </ul>
+                    <ul>
+                        <li><a class="underline leading-[30px]" href="">Speed Test</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <div>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Help Centre</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Jobs</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Cookie Preferences</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Legal Notices</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Account</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Ways to Watch</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Corporate Information</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+                                    Only on Netflix</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+
+                                    Media Centre</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+
+                                    Terms of Use</a></li>
+                        </ul>
+                        <ul>
+                            <li><a class="underline leading-[30px]" href="">
+
+                                    Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="relative mt-[30px]">
+                    <svg class="text-white absolute top-[9px] left-[7px]" width="16" height="16"
+                        viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        class="default-ltr-cache-4z3qvp e1svuwfo1" data-name="Languages" aria-hidden="true">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M10.7668 5.33333L10.5038 5.99715L9.33974 8.9355L8.76866 10.377L7.33333 14H9.10751L9.83505 12.0326H13.4217L14.162 14H16L12.5665 5.33333H10.8278H10.7668ZM10.6186 9.93479L10.3839 10.5632H11.1036H12.8856L11.6348 7.2136L10.6186 9.93479ZM9.52722 4.84224C9.55393 4.77481 9.58574 4.71045 9.62211 4.64954H6.41909V2H4.926V4.64954H0.540802V5.99715H4.31466C3.35062 7.79015 1.75173 9.51463 0 10.4283C0.329184 10.7138 0.811203 11.2391 1.04633 11.5931C2.55118 10.6795 3.90318 9.22912 4.926 7.57316V12.6667H6.41909V7.51606C6.81951 8.15256 7.26748 8.76169 7.7521 9.32292L8.31996 7.88955C7.80191 7.29052 7.34631 6.64699 6.9834 5.99715H9.06968L9.52722 4.84224Z"
+                            fill="currentColor"></path>
+                    </svg>
+                    <select name="" id=""
+                        class="bg-[black] text-white border-[1px] border-[white] sm:p-[5px_25px] p-[5px_20px] rounded-[5px]">
+                        <option value="">English</option>
+                        <option value="">hindi</option>
+                    </select>
+                    <h5 class="mt-[20px] text-[grey]">Netflix India</h5>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--7 section ends  -->
 
 
     <!-- javascript start -->
-<script src="main.js"></script>
+    <script src="main.js"></script>
     <!-- javascript ends -->
 </body>
 
