--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>netflix</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon-32x32.png">
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
